@@ -6,7 +6,6 @@ data/man.xml.in
 data/toc.xml.in
 data/ui/yelp.glade
 data/yelp.schemas.in
-src/GNOME_Yelp.server.in
 src/yelp-base.c
 src/yelp-bookmarks.c
 src/yelp-db-pager.c
