@@ -1,5 +1,11 @@
 2006-06-11  Brent Smith  <gnome@nextreality.net>
 
+	* po/POTFILES.in:
+	* src/Makefile.am:
+	Some band-aids to get distcheck to not fail.
+
+2006-06-11  Brent Smith  <gnome@nextreality.net>
+
 	* configure.in:
 	* src/Yelper.cpp:
 	* src/yelp-bookmarks.c:
